# cosy

./: CMakeLists.txt  readme.md
cmake/: cosyConfig.cmake
include/cosy/: affine.h  camera.h  geo.h  proj.h  python.h
include/cosy/affine/: named_axes.h  rigid.h  rotation.h  scaled_rigid.h
include/cosy/camera/: pinhole.h
python/: CMakeLists.txt  setup.py
python/backend/: CMakeLists.txt  main.cpp  proj.cpp
python/build_wheel/: build_in_docker.sh
python/cosy/: affine.py  geo.py
python/test/: test_cosy.py  test_proj.py
test/: CMakeLists.txt  cereal.cpp  cosy.cpp  proj.cpp
